stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_actor_nested_local_annotation_unsupported.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/actor_nested_local_annotation_unsupported.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported actor local annotation
   ╭─[tests/fixtures/diagnostics/actors/actor_nested_local_annotation_unsupported.ml:4:18]
 3 │     let inner = spawn {
 4 │       let count: i64 = 1;
   ·                  ─┬─
   ·                   ╰── stage0 actor locals do not support type annotations yet
 5 │       receive {
   ╰────
  help: omit the annotation
