stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_monitor_literal_non_actor.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/monitor_literal_non_actor.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × function argument type does not match
   ╭─[tests/fixtures/diagnostics/actors/monitor_literal_non_actor.ml:2:3]
 1 │ fn main() {
 2 │   monitor("not an actor");
   ·   ───────────┬───────────
   ·              ╰── this call requires `actor_id<'t24>`, but the argument provides `String`
 3 │   dbg("done")
   ╰────
  help: pass an argument with the parameter type expected by the function
