stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_send_branch_actor_message_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 2677
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/send_branch_actor_message_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × function argument type does not match
   ╭─[tests/fixtures/diagnostics/actors/send_branch_actor_message_mismatch.ml:7:3]
 6 │   };
 7 │   send(worker, 1);
   ·   ───────┬───────
   ·          ╰── this call requires `String`, but the argument provides `i64`
 8 │   dbg("done")
   ╰────
  help: pass an argument with the parameter type expected by the function
