stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_send_generic_record_multi_arm_message_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 4697
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/send_generic_record_multi_arm_message_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × function argument type does not match
    ╭─[tests/fixtures/diagnostics/actors/send_generic_record_multi_arm_message_mismatch.ml:10:3]
  9 │   };
 10 │   send(worker, box { value: "oops" })
    ·   ─────────────────┬─────────────────
    ·                    ╰── this call requires `i64`, but the argument provides `String`
 11 │ }
    ╰────
  help: pass an argument with the parameter type expected by the function
