stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_send_message_type_mismatch.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/send_message_type_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × function argument type does not match
   ╭─[tests/fixtures/diagnostics/actors/send_message_type_mismatch.ml:3:3]
 2 │   let worker = spawn { receive { 1 -> () } };
 3 │   send(worker, "oops")
   ·   ──────────┬─────────
   ·             ╰── this call requires `i64`, but the argument provides `String`
 4 │ }
   ╰────
  help: pass an argument with the parameter type expected by the function
