stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_send_non_actor.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/send_non_actor.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × send target is not an actor
   ╭─[tests/fixtures/diagnostics/actors/send_non_actor.ml:3:3]
 2 │   let not_actor_id = "not an actor";
 3 │   send(not_actor_id, "hello")
   ·   ─────────────┬─────────────
   ·                ╰── `not_actor_id` is a value, not an actor id
 4 │ }
   ╰────
  help: send to the result of `spawn { ... }`
