stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_send_unknown_actor_id.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/send_unknown_actor_id.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × send target is unknown
   ╭─[tests/fixtures/diagnostics/actors/send_unknown_actor_id.ml:2:3]
 1 │ fn main() {
 2 │   send(foo, "hello")
   ·   ─────────┬────────
   ·            ╰── `foo` is not bound in this scope
 3 │ }
   ╰────
  help: send to the result of `spawn { ... }`
